src/test/ui/compile-fail-migration/borrowck/two-phase-cannot-nest-mut-self-calls.stderr
error[E0502]: cannot borrow `vec` as mutable because it is also borrowed as immutable
  --> $DIR/two-phase-cannot-nest-mut-self-calls.rs:26:9
   |
LL |       vec.get({
   |       ---
   |       |
   |  _____immutable borrow occurs here
   | |
LL | |
LL | |         vec.push(2);
   | |         ^^^^^^^^^^^ mutable borrow occurs here
LL | |         //~^ ERROR cannot borrow `vec` as mutable because it is also borrowed as immutable
LL | |
LL | |         0
LL | |     });
   | |______- borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0502`.
